fix(backend): protect backend
