# backend/cmd/docs/swagger.yaml
@@ -28,7 +28,6 @@ definitions:
         type: array
       force:
         maximum: 7200
-        minimum: 0
         type: integer
       logChannelId:
         type: string
@@ -37,7 +36,11 @@ definitions:
       useForceOnly:
         type: boolean
     required:
+    - bumpBanRoleId
     - bumpRoleIds
+    - logChannelId
+    - pingChannelId
+    - useForceOnly
     type: object
   models.SettingsModel:
     properties:
@@ -47,6 +50,8 @@ definitions:
         items:
           type: string
         type: array
+      createdAt:
+        type: string
       force:
         type: integer
       guildId:
@@ -57,8 +62,21 @@ definitions:
         type: string
       pingChannelId:
         type: string
+      updatedAt:
+        type: string
       useForceOnly:
         type: boolean
+    type: object
+  repositories.UserBumps:
+    properties:
+      bump:
+        type: integer
+      like:
+        type: integer
+      points:
+        type: integer
+      up:
+        type: integer
     type: object
   responses.BadRequestError:
     properties:
@@ -97,6 +115,58 @@ info:
   title: Helper API
   version: "1.0"
 paths:
+  /api/bumps/{guildId}/{userId}:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves bump statistics for a user within date range
+      parameters:
+      - description: Guild ID
+        in: path
+        name: guildId
+        required: true
+        type: string
+      - description: User ID
+        in: path
+        name: userId
+        required: true
+        type: string
+      - description: Start date
+        format: date
+        in: query
+        name: from
+        required: true
+        type: string
+      - description: End date
+        format: date
+        in: query
+        name: to
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/repositories.UserBumps'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/responses.NotFoundError'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/responses.ValidationError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/responses.InternalError'
+      security:
+      - ApiKeyAuth: []
+      summary: Get user bumps statistics
+      tags:
+      - bumps
   /api/settings:
     post:
       consumes:
@@ -184,8 +254,8 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created
           schema:
             $ref: '#/definitions/models.SettingsModel'
         "400":
